; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_window_changed_callback.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/win-capture/extr_game-capture.c_window_changed_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SETTING_CAPTURE_WINDOW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32*)* @window_changed_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @window_changed_callback(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32 0, i32* %9, align 4
  store i64 0, i64* %10, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* @SETTING_CAPTURE_WINDOW, align 4
  %14 = call i8* @obs_data_get_string(i32* %12, i32 %13)
  store i8* %14, i8** %8, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %53

18:                                               ; preds = %3
  br label %19

19:                                               ; preds = %34, %18
  %20 = load i32*, i32** %6, align 8
  %21 = load i64, i64* %10, align 8
  %22 = add i64 %21, 1
  store i64 %22, i64* %10, align 8
  %23 = trunc i64 %21 to i32
  %24 = call i8* @obs_property_list_item_string(i32* %20, i32 %23)
  store i8* %24, i8** %11, align 8
  %25 = load i8*, i8** %11, align 8
  %26 = icmp ne i8* %25, null
  br i1 %26, label %28, label %27

27:                                               ; preds = %19
  br label %35

28:                                               ; preds = %19
  %29 = load i8*, i8** %11, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = call i64 @strcmp(i8* %29, i8* %30)
  %32 = icmp eq i64 %31, 0
  br i1 %32, label %33, label %34

33:                                               ; preds = %28
  store i32 1, i32* %9, align 4
  br label %35

34:                                               ; preds = %28
  br label %19

35:                                               ; preds = %33, %27
  %36 = load i8*, i8** %8, align 8
  %37 = icmp ne i8* %36, null
  br i1 %37, label %38, label %50

38:                                               ; preds = %35
  %39 = load i8*, i8** %8, align 8
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %43, label %50

43:                                               ; preds = %38
  %44 = load i32, i32* %9, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %50, label %46

46:                                               ; preds = %43
  %47 = load i32*, i32** %6, align 8
  %48 = load i8*, i8** %8, align 8
  %49 = call i32 @insert_preserved_val(i32* %47, i8* %48)
  store i32 1, i32* %4, align 4
  br label %53

50:                                               ; preds = %43, %38, %35
  %51 = load i32*, i32** %5, align 8
  %52 = call i32 @UNUSED_PARAMETER(i32* %51)
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %50, %46, %17
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i8* @obs_data_get_string(i32*, i32) #1

declare dso_local i8* @obs_property_list_item_string(i32*, i32) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @insert_preserved_val(i32*, i8*) #1

declare dso_local i32 @UNUSED_PARAMETER(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
